--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
  <title>My awesome web page</title>
   </head>
  <body> 
+  
   <h1>I'm a header 1!</h1>
 Hello there, awesome person!
   <img src="https://avatars.githubusercontent.com/u/98726921?v=4">
+  <ol>
+
+    <li>google</li>
+
+    <li>youtube</li>
+
+    <li>Instagram</li>
+
+</ol>
 
    </body>
   </html>
