--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <h1>I'm a header 1!</h1>
 Hello there, awesome person!
   <img src="https://avatars.githubusercontent.com/u/98726921?v=4">
+  <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
   <ol>
 
     <li>google</li>
